--- a/css/core.css
+++ b/css/core.css
@@ -416,7 +416,7 @@
 	  margin-left: -22px;
 	  margin-top: -22px;
 	  border-radius: 50%;
-	  background: rgba(255, 255, 255, 0.35) url("/images/cd-arrows.svg") no-repeat center center;
+	  background: rgba(255, 255, 255, 0.35) url("../images/cd-arrows.svg") no-repeat center center;
 	  cursor: move;
 	  box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.2), 0 0 10px rgba(0, 0, 0, 0.6), inset 0 1px 0 rgba(255, 255, 255, 0.3);
 	  opacity: 0;
