--- a/css/nexaFont.css
+++ b/css/nexaFont.css
@@ -1,10 +1,10 @@
  @font-face {
 	font-family: 'nexa_lightregular';
-	src: url('fonts/nexa_light-webfont.eot');
-	src: url('fonts/nexa_light-webfont.eot?#iefix') format('embedded-opentype'),
-		 url('fonts/nexa_light-webfont.woff2') format('woff2'),
-		 url('fonts/nexa_light-webfont.woff') format('woff'),
-		 url('fonts/nexa_light-webfont.ttf') format('truetype');
+	src: url('https://www.shortcord.com/PrettySteam/fonts/nexa_light-webfont.eot');
+	src: url('https://www.shortcord.com/PrettySteam/fonts/nexa_light-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('https://www.shortcord.com/PrettySteam/fonts/nexa_light-webfont.woff2') format('woff2'),
+		 url('https://www.shortcord.com/PrettySteam/fonts/nexa_light-webfont.woff') format('woff'),
+		 url('https://www.shortcord.com/PrettySteam/fonts/nexa_light-webfont.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 
@@ -12,11 +12,11 @@
 
 	@font-face {
 		font-family: 'nexa_boldregular';
-		src: url('fonts/nexa_bold-webfont.eot');
-		src: url('fonts/nexa_bold-webfont.eot?#iefix') format('embedded-opentype'),
-			 url('fonts/nexa_bold-webfont.woff2') format('woff2'),
-			 url('fonts/nexa_bold-webfont.woff') format('woff'),
-			 url('fonts/nexa_bold-webfont.ttf') format('truetype');
+		src: url('https://www.shortcord.com/PrettySteam/fonts/nexa_bold-webfont.eot');
+		src: url('https://www.shortcord.com/PrettySteam/fonts/nexa_bold-webfont.eot?#iefix') format('embedded-opentype'),
+			 url('https://www.shortcord.com/PrettySteam/fonts/nexa_bold-webfont.woff2') format('woff2'),
+			 url('https://www.shortcord.com/PrettySteam/fonts/nexa_bold-webfont.woff') format('woff'),
+			 url('https://www.shortcord.com/PrettySteam/fonts/nexa_bold-webfont.ttf') format('truetype');
 		font-weight: normal;
 		font-style: normal;
 
