--- a/css/core.css
+++ b/css/core.css
@@ -147,6 +147,10 @@
 	  border-radius:0 5px 5px 0;
 	}
 
+	div#smallScreen {
+		display: none;
+	}
+
 	div#smallScreen a,
 	section ul a,
 	header ul a {
@@ -254,11 +258,16 @@
 	  header a small {
 		display:inline;
 	  }
-	  
+		
+	  div#smallScreen {
+		  display: block;
+	  }
+	
+	  hr#imageSpace,
+	  figure.cd-image-container,
+	  section ul,
 	  header ul {
-		position:absolute;
-		right:50px;
-		top:52px;
+		display:none;
 	  }
 	}
 
@@ -278,6 +287,17 @@
 	  pre, code {
 		word-wrap:normal;
 	  }
+		
+	  div#smallScreen {
+		  display: block;
+	  }
+	
+	  hr#imageSpace,
+	  figure.cd-image-container,
+	  section ul,
+	  header ul {
+		display:none;
+	  }
 	}
 
 	@media print, screen and (max-width: 480px) {
@@ -285,6 +305,11 @@
 		padding:15px;
 	  }
 	  
+	  div#smallScreen {
+		  display: block;
+	  }
+		
+	
 	  hr#imageSpace,
 	  figure.cd-image-container,
 	  section ul,
