--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,7 +4,7 @@
 	src: url('https://www.shortcord.com/PrettySteam/fonts/aaargh-webfont.eot?#iefix') format('embedded-opentype'),
 		url('https://www.shortcord.com/PrettySteam/fonts/aaargh-webfont.woff2') format('woff2'),
 		url('https://www.shortcord.com/PrettySteam/fonts/aaargh-webfont.woff') format('woff'),
-		url('https://www.shortcord.com/PrettySteam/fonts/aaargh-webfont.ttf') format('truetype'),
+		url('https://www.shortcord.com/PrettySteam/fonts/aaargh-webfont.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
